# Ethical-RAG-Scrapers

./: .gitignore  README.md  pyproject.toml  requirements.txt
Datasets/: finance.csv  legal_gov.csv  research_papers.csv  tech_docs.csv  tngo_articles.csv  wanderingearl.csv
Embeddings/: clean_merged_10k-15k.csv  clean_merged_15k-20k.csv  clean_merged_20k-25k.csv  clean_merged_25k-32k.csv  clean_merged_5k.csv
Helpers/: csv_cleaner.py  csv_count.py  csv_merger.py  date_fixer.py  finalcleaner.py  merge_cleaner.py
Merged Datasets/: First_5k.csv  cleaned_dataset.csv  final_embeddings.csv  test_10.csv
NEW Merged Datasets/: arxiv.csv  arxiv_embeded.csv  science_daily.csv
RAG/: Embedder.py  test.py
RAG/Embeddings/: clean_merged_5k-10k.csv  final_embeddings_merged.csv
Scrapers/: papers.py  sciencedaily.py
Scrapers/arxiv_txt/: arxiv_urls_10.txt  arxiv_urls_6.txt  arxiv_urls_7.txt  arxiv_urls_8.txt  arxiv_urls_9.txt
Scrapers/sciencedaily_txt/: sitemap-releases-1997.txt  sitemap-releases-1998.txt  sitemap-releases-1999.txt  sitemap-releases-2000.txt  sitemap-releases-2001.txt  sitemap-releases-2002.txt  sitemap-releases-2003.txt  sitemap-releases-2004.txt  sitemap-releases-2005.txt  sitemap-releases-2006.txt  sitemap-releases-2007.txt  sitemap-releases-2008.txt  sitemap-releases-2009.txt  sitemap-releases-2010.txt  sitemap-releases-2011.txt  sitemap-releases-2012.txt  sitemap-releases-2013.txt  sitemap-releases-2014.txt  sitemap-releases-2015.txt  sitemap-releases-2016.txt  sitemap-releases-2017.txt  sitemap-releases-2018.txt  sitemap-releases-2019.txt  (+5 more)
(+46 files in other folders)
